figured out media query

--- a/index.html
+++ b/index.html
@@ -20,17 +20,42 @@
     <!-- navbar -->
     <nav>
         <a href="https://github.com/SFSullivan">Github</a>
-        <a href="#">About Me</a>
-        <a href="#">Contact Info</a>
+        <a href="#about-me-scroll">About Me</a>
+        <a href="#hopes">My Reasoning</a>
+        <a href="#contact">Contact Info</a>
     </nav>
 
     <!-- main body of portfolio -->
     <main>
-        <section>
-            <div class="container">
-                
+        <section id="about-me-scroll" class="about-me">
+            <div class="container">;
+                <h3>About Me</h3>
+                <img src="./assets/images/kuwaitphoto.jpg" height="350px" width="350px" alt="Me in Kuwait">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam ullam sed neque, nemo unde nam veritatis quo odit dolorem tenetur dolorum blanditiis necessitatibus nisi incidunt commodi aut adipisci soluta iure.
+                A saepe dolorum, fugit distinctio aliquam magnam placeat incidunt aspernatur similique laudantium praesentium neque dicta ab corporis, voluptas, officiis soluta laborum reiciendis aperiam! Fugit voluptatibus harum nemo numquam nam laborum.</p>
             </div>
         </section>
+        <section id="hopes" class="hopes-class">
+            <div class="container">
+                <h3>Reasons Why I want to Learn to Code</h3>
+                <img src="https://api.lorem.space/image/movie?w=200&h=275" alt="placeholder image">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis officiis asperiores ipsam dolore quos velit vitae sunt eaque. Fugiat ipsum laboriosam rem, ullam voluptas velit quaerat? Expedita distinctio quisquam assumenda.
+                    Eum incidunt corrupti blanditiis dolores quibusdam? Dicta nobis at iure, cum iste ipsum vitae in perspiciatis corporis repellendus, maiores asperiores doloremque aliquid, ipsam voluptatum ab perferendis optio repellat? Reprehenderit, dignissimos!</p>
+            </div>
+        </section>
+         <section id="contact" class="contact-info">
+            <div class="container">
+                <img src="https://api.lorem.space/image/movie?w=200&h=275" alt="placeholder image">
+                    <h3>Contact Info</h3>
+                    <ul>
+                        <li>EMAIL ADDRESS</li>
+                        <li>PHONE NUMBER</li>
+                        <li>FACEBOOK</li>
+                        <li>INSTAGRAM</li>
+                    </ul>
+            </div>
+         </section>
+
     </main>
 
     <footer>
